Refactor config handling to only serialise and deserialise on load and save